fixed collapsing

--- a/src/App.css
+++ b/src/App.css
@@ -261,14 +261,16 @@ background:linear-gradient(
 }
 
 .main-layout{
-  display: flex;
+
+   display: flex;
+  flex-direction: row;        
   justify-content: center;
   gap: 30px;
   padding: 40px;
   align-items: start;
   max-width: 1500px;
   margin: auto;
-  transition: all 0.4s ease;
+  transition: width 0.5s ease, opacity 0.5s ease;
 }
 
 .report-box{
@@ -414,6 +416,14 @@ padding:0 15px;
 padding:20px;
 gap:25px;
 }
+.right {
+    width: 100% ;
+    opacity: 1 ;
+    flex: 1 ;
+  }
+  .left {
+    width: 100% ;
+  }
 .form-box{
 padding:20px;
 min-width:auto;
